[gd_scene load_steps=13 format=2]

[ext_resource path="res://sounds/random/random_basement_1.mp3" type="AudioStream" id=1]
[ext_resource path="res://sounds/random/random_basement_4.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/RandomAudioPlayer.gd" type="Script" id=3]
[ext_resource path="res://sounds/random/random_basement_3.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/random/random_basement_6.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/random/random_basement_2.mp3" type="AudioStream" id=6]
[ext_resource path="res://sounds/random/random_basement_5.mp3" type="AudioStream" id=7]
[ext_resource path="res://sounds/random/random_paranoia_3.mp3" type="AudioStream" id=8]
[ext_resource path="res://sounds/random/random_paranoia_1.mp3" type="AudioStream" id=9]
[ext_resource path="res://sounds/random/random_paranoia_4.mp3" type="AudioStream" id=10]
[ext_resource path="res://sounds/random/random_paranoia_5.mp3" type="AudioStream" id=11]
[ext_resource path="res://sounds/random/random_paranoia_2.mp3" type="AudioStream" id=12]

[node name="RandomAudioPlayer" type="Node"]
script = ExtResource( 3 )

[node name="RandomBasement1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="RandomBasement2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="RandomBasement3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="RandomBasement4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="RandomBasement5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="RandomBasement6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="RandomParanoia1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="RandomParanoia2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="RandomParanoia3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="RandomParanoia4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="RandomParanoia5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
